overflow issues on header fix + link-absolute

--- a/assets/css/src/_links.css
+++ b/assets/css/src/_links.css
@@ -45,7 +45,6 @@ a:not(.button):active {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	max-width: min-content;
 }
 
 /* Back to top button */
