--- a/assets/css/src/_navigation.css
+++ b/assets/css/src/_navigation.css
@@ -3,7 +3,6 @@
 	display: flex;
 	justify-content: space-between;
 	background-color: var(--nav-bk-color);
-	overflow-x: hidden;
 }
 
 .primary-nav {
